made search responsive

--- a/src/theme/sass/styles.scss
+++ b/src/theme/sass/styles.scss
@@ -16,6 +16,9 @@
 // card view (eg. artist/album landing)
 @import "components/cards";
 
+// mixed entity page
+@import "components/mixed";
+
 // generic elements (eg. buttons, boxes)
 @import "components/regions";
 
