--- a/src/theme/sass/components/_pages.scss
+++ b/src/theme/sass/components/_pages.scss
@@ -109,85 +109,10 @@
     clear: both;
   }
 }
-h3.search-heading {
-  background: #eee;
-  padding: 10px;
-  height: 70px;
-  position: relative;
-  color: #B9B9B9;
-  span {
-    display: block;
-    font-size: 27px;
-    line-height: 39px;
-    color: $color-dark-xbmc;
-  }
-  img {
-    float: left;
-    width: 70px;
-    height: 70px;
-    padding-right: 15px;
-  }
-  &:after {
-    content: "";
-    width: 0;
-    height: 0;
-    border: 8px solid rgba(0, 0, 0, 0);
-    border-top: 8px solid #EEE;
-    position: absolute;
-    bottom: -15px;
-    left: 22px;
-  }
-}
 
-// search result card (no freewall)
-.album-search-list {
-  li {
-    //@include card('small');
-    width: $card-small-width;
-    height: $card-small-width + 50;
-    margin: 5px 6px 10px 6px;
-  }
+.search-results-content {
+  padding: 5px 10px $height-footer;
 }
-
-// search section
-.addon-box,
-.noresult-box {
-  min-height: 90px;
-  padding: 10px 10px;
-  border: 0;
-  background: rgba(241, 241, 241, 0.41);
-  font-size: 120%;
-  color: #797272;
-  margin: 10px 0;
-  display: block;
-  &.empty img {
-    opacity: 0.5;
-  }
-  img {
-    width: 70px;
-    height: 70px;
-    margin-right: 15px;
-    float: left;
-  }
-  span {
-    padding-top: 10px;
-    line-height: 25px;
-    display: block;
-  }
-}
-.addon-box {
-  cursor: pointer;
-  &:hover {
-    background: #eee;
-    color: #534c4c;
-  }
-}
-.section-title {
-  margin: 2px;
-  background: #fff;
-  padding: 10px;
-}
-
 
 .album-small-row {
   position: relative;
