--- a/src/theme/sass/components/_cards.scss
+++ b/src/theme/sass/components/_cards.scss
@@ -184,6 +184,11 @@
   cursor: default;
   @include watched-style;
 
+  zoom: 0.8;
+  @include breakpoint($width-mobile){
+    zoom: 1;
+  }
+
   .image {
     display: block;
     background-color: #adb3b6;
