--- a/src/theme/sass/components/_video.scss
+++ b/src/theme/sass/components/_video.scss
@@ -1,6 +1,9 @@
 ul.video-list {
   margin: 0px 12px 20px 10px;
+  text-align: center;
   li {
+    display: inline-block;
+    text-align: left;
     .card {
       @include card('poster');
       float: left;
@@ -8,6 +11,11 @@ ul.video-list {
     }
     &.next-page {
       display: none;
+    }
+    @include breakpoint($width-small){
+      display: block;
+      float: left;
+
     }
   }
 }
