video seek to resume onPlay

--- a/src/theme/sass/components/_remote.scss
+++ b/src/theme/sass/components/_remote.scss
@@ -181,6 +181,11 @@ body {
   }
 
   &.section-remote {
+    #content {
+      position: relative;
+      z-index: -9999;
+      display: none;
+    }
     .xbmc-remote-wrapper {
       display: block;
     }
