Added Video sources to files

--- a/src/theme/sass/components/_regions.scss
+++ b/src/theme/sass/components/_regions.scss
@@ -381,7 +381,7 @@ body.fixed-header {
     }
   }
   // files
-  ul.files-list {
+  .file-lists {
     li {
       position: relative;
       .file-item {
