playlist clear and refresh work on visible playlist

--- a/src/theme/sass/components/_widgets.scss
+++ b/src/theme/sass/components/_widgets.scss
@@ -212,3 +212,12 @@ input[type="text"] {
     zoom: 1;
   }
 }
+
+.dropdown-header {
+  display: block;
+  padding: 10px 13px;
+  font-size: 12px;
+  line-height: 1.42857143;
+  color: #999;
+  background: #F4F4F4;
+}
