--- a/src/theme/sass/components/_cards.scss
+++ b/src/theme/sass/components/_cards.scss
@@ -303,6 +303,23 @@
     }
   }
 
+  // generic top level
+  &.watched-yes {
+    button.watched-btn i.fa:before {
+      content: "\f058";
+    }
+  }
+
+  .is-watched {
+    position: absolute;
+    bottom: 10px;
+    z-index: 10;
+    color: $color-carrot;
+    //text-shadow: 0 1px 5px rgba(0,0,0,0.5);
+    right: 10px;
+    display: none;
+    font-size: 16px;
+  }
 }
 
 
