--- a/src/theme/sass/components/_regions.scss
+++ b/src/theme/sass/components/_regions.scss
@@ -14,6 +14,7 @@
     bottom: $height-footer;
     height: auto;
   }
+
   //logo
   #logo {
     width: $width-header;
@@ -77,13 +78,14 @@
         }
         &.active {
           a {
-            color: $color-concrete;
+            color: #2B2F30;
+            background: #F0F0F0;
           }
         }
       }
     }
     @include breakpoint($width-tablet){
-      margin-top: $height-logo + 10;
+      margin-top: $height-logo + 5;
     }
     @include breakpoint($width-small){
       ul {
@@ -138,8 +140,11 @@ body.fixed-header {
   right: 0;
   z-index: 500;
   @include transition(all 0.3s linear);
+
   i {
     color: rgba(246, 245, 243, 0.55);
+    padding-right: 15px;
+    font-size: 19px;
   }
   h1 {
     font-weight: normal;
@@ -504,7 +509,7 @@ body.fixed-header {
   width: auto;
   background: #f8f8f8;
   position: fixed;
-  top: 50px;
+  top: 0px;
   right: 0;
   left: 0;
   bottom: 0;
