music section, sidebar menu, tags View, styles

--- a/src/theme/sass/_base.scss
+++ b/src/theme/sass/_base.scss
@@ -60,13 +60,13 @@ $width-sidebar-second-small:260px;
 $mini-img-width: 60px;
 
 // cards
-$card-gutter: 5px;
-$card-small-width: 170px;
-$card-small-height: 205px;
-$card-small-image-height: 170px;
-$card-large-width: 370px;
-$card-large-height: 400px;
-$card-large-image-height: 370px;
+$card-gutter: 5px 10px;
+$card-small-width: 163px;
+$card-small-height: 235px;
+$card-small-image-height: 163px;
+$card-large-width: 200px;
+$card-large-height: 170px;
+$card-large-image-height: 160px;
 
 
 
