--- a/src/theme/sass/styles.scss
+++ b/src/theme/sass/styles.scss
@@ -41,6 +41,9 @@
 @import "components/songs";
 
 // page specific styles
+@import "components/tags";
+
+// page specific styles
 @import "components/playlists";
 
 // Video specific styles
