--- a/src/theme/sass/styles.scss
+++ b/src/theme/sass/styles.scss
@@ -44,6 +44,9 @@
 @import "components/tags";
 
 // page specific styles
+@import "components/pvr";
+
+// page specific styles
 @import "components/playlists";
 
 // Video specific styles
