--- a/src/theme/sass/components/_pages.scss
+++ b/src/theme/sass/components/_pages.scss
@@ -400,7 +400,7 @@ body {
   // @TODO set this as default
   &.section-movies,
   &.section-movie-genre,
-  &.section-tvshows,
+  &.section-tv,
   &.section-mymusic,
   &.section-mymovies,
   &.section-mytv,
