added view toggle to recently added and played

--- a/src/theme/sass/_base.scss
+++ b/src/theme/sass/_base.scss
@@ -18,6 +18,9 @@ $color-orange: #F39C12;
 $color-carrot: #E67E22;
 $color-green-sea: #16A085;
 $color-pastel-orange: #FFD786;
+// invert/active
+$color-invert-bg: #999EA0;
+$color-invert-text: $color-whitesmoke;
 
 // trans
 $color-trans-light: rgba(196, 196, 196, 0.48);
