--- a/src/theme/sass/components/_pages.scss
+++ b/src/theme/sass/components/_pages.scss
@@ -399,6 +399,7 @@ body {
 
   // @TODO set this as default
   &.section-movies,
+  &.section-playlist,
   &.section-movie-genre,
   &.section-tv,
   &.section-mymusic,
@@ -409,7 +410,7 @@ body {
     @include breakpoint($width-tablet){ 
       #page-header h1 a {
         width: 185px;
-        background: rgba(255, 255, 255, 0.96);
+        background: rgba(255, 255, 255, 0.98);
       }
       #sidebar-first {
         width: 185px;
