--- a/src/theme/sass/components/_widgets.scss
+++ b/src/theme/sass/components/_widgets.scss
@@ -442,7 +442,9 @@ input[type="text"] {
   img {
     cursor: pointer;
     width: 100%;
-    margin-top: -6%;
+    @include breakpoint($width-large){
+      margin-top: -6%;
+    }
     min-width: 400px;
   }
   &.full-size {
