added progress to full tv and movie view, tv title change

--- a/src/theme/sass/components/_cards.scss
+++ b/src/theme/sass/components/_cards.scss
@@ -135,8 +135,7 @@
     }
     .actions-wrapper {
       height:252px;
-      .tvshow-play,
-      .movie-play {
+      .video-play {
         position: absolute;
         left: 10px;
         bottom: 9px;
