--- a/src/theme/sass/components/_player.scss
+++ b/src/theme/sass/components/_player.scss
@@ -149,6 +149,7 @@
 // Now Playing
 #now-playing,
 #browser-now-playing {
+  position: fixed;
   font-size: 12px;
   margin-right: 0;
   margin-left: 0;
