Set now playing position to absolute for iOS and Safari consistency.

--- a/src/theme/sass/components/_player.scss
+++ b/src/theme/sass/components/_player.scss
@@ -149,7 +149,7 @@
 // Now Playing
 #now-playing,
 #browser-now-playing {
-  position: fixed;
+  position: absolute;
   font-size: 12px;
   margin-right: 0;
   margin-left: 0;
