Fixed movie list bug readding all items, fixed/improved now playing meta info

--- a/src/theme/sass/components/_player.scss
+++ b/src/theme/sass/components/_player.scss
@@ -150,6 +150,7 @@
 #now-playing,
 #browser-now-playing {
   position: absolute;
+  white-space: nowrap;
   font-size: 12px;
   margin-right: 0;
   margin-left: 0;
