--- a/src/theme/sass/components/_video.scss
+++ b/src/theme/sass/components/_video.scss
@@ -342,7 +342,7 @@ ul.video-list {
 }
 
 #tv-watch,
-#tvshow-detail,
+#tv-season,
 #movie-watch,
 #movie-detail {
   $grids: 8;
@@ -419,15 +419,7 @@ ul.video-list {
 }
 
 #seasons {
-//  overflow: hidden;
-//  clear: both;
-//  background: $color-trans-white;
-//  padding: 15px;
-//  margin-top: 20px;
-//  position: relative;
-//  @include breakpoint ($width-small){
-//    padding: 15px 20px;
-//  }
+  clear: both;
   overflow: hidden;
   padding-bottom: 20px;
   margin-right: -10px; // accounts for the extra margin on the end of a row
@@ -478,19 +470,4 @@ h1.video-title {
   color: #444;
   letter-spacing: -1px;
   font-weight: normal;
-  &.tv-title {
-    padding: 0 15px;
-  }
-  @include breakpoint($width-tablet) {
-    display: none;
-  }
-}
-.tvtype-episode {
-  h1.video-title {
-    margin: 20px 0 -20px;
-    @include breakpoint($width-tablet) {
-      display: block;
-    }
-  }
-
 }
